# grpc-hello-world

./: Cargo.toml  README.md  build.rs  snapcraft.yaml
snap/: grpc-hello-world.service  grpc-hello-world.socket
src/: main.rs
